--- a/WebApp-Cubits/Views/Home/Index.cshtml
+++ b/WebApp-Cubits/Views/Home/Index.cshtml
@@ -6,3 +6,21 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+<div class="justify-content-center">
+    <h3>Productos</h3>
+    <ul>
+        <li><a asp-action="Create" asp-controller="Products">Crear Producto</a></li>
+        <li><a asp-action="Index" asp-controller="Products">Lista de Productos</a></li>
+    </ul>
+    <h3>Categorías</h3>
+    <ul>
+        <li><a asp-action="Create" asp-controller="Categories">Crear Categorías</a></li>
+        <li><a asp-action="Index" asp-controller="Categories">Lista de Categorías</a></li>
+    </ul>
+    <h3>Proveedores</h3>
+    <ul>
+        <li><a asp-action="Create" asp-controller="Providers">Crear Proveedores</a></li>
+        <li><a asp-action="Index" asp-controller="Providers">Lista de Proveedores</a></li>
+    </ul>
+
+</div>
