--- a/WebApp-Cubits/Views/Products/Index.cshtml
+++ b/WebApp-Cubits/Views/Products/Index.cshtml
@@ -1,8 +1,13 @@
-﻿@model List<Product>
+﻿@{
+    ViewData["Title"] = "Productos";
+}
 
     <div class="row">
         <div class="col-lg-12">
             <h2>Lista de productos</h2>
+
+            <a class="btn btn-primary" href="/Products/Create">Crear</a>
+
             <table class="table table-bordered">
                 <thead>
                     <tr>
@@ -10,19 +15,45 @@
                         <th>Nombre</th>
                         <th>Descripcion</th>
                         <th>Precio</th>
+                        <th>Acciones</th>
                     </tr>
                 </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <th>@item.Id</th>
-                            <th>@item.Name</th>
-                            <th>@item.Description</th>
-                            <th>@item.Price</th>
-                        </tr>
-                    }
-                </tbody>
+                <tbody id="tableBody"></tbody>
             </table>
         </div>
     </div>
+
+@section Scripts
+{
+    <script type="text/javascript">
+        getList = () => {
+            $.ajax({
+                method: "GET",
+                url: "/api/products"
+            }).done((producList) => {
+                $.each(producList, (index, product) => {
+                    addRow(product);
+                });
+            });
+        }
+        addRow = (product) => {
+            const row = `
+                    <tr>
+                        <td>${product.id}</td>
+                        <td>${product.name}</td>
+                        <td>${product.desciption}</td>
+                        <td>${product.price}</td>
+                        <td>${product.stock}</td>
+                        <td>
+                            <a href='/products/update?id=${product.id}'>Actualizar</a> -
+                            <a href='/products/delete?id=${product.id}'>Eliminar</a>
+                        </td>
+                    </tr>
+            `;
+            $("#tableBody").append(row);
+
+            $(document).ready(() => {
+                getList();
+            })
+    </script>
+}
