--- a/WebApp-Cubits/Views/Home/Index.cshtml
+++ b/WebApp-Cubits/Views/Home/Index.cshtml
@@ -9,18 +9,18 @@
 <div class="justify-content-center">
     <h3>Productos</h3>
     <ul>
-        <li><a asp-action="Create" asp-controller="Products">Crear Producto</a></li>
-        <li><a asp-action="Index" asp-controller="Products">Lista de Productos</a></li>
+        <li><a href="/products/create">Crear Producto</a></li>
+        <li><a href="/products/index">Lista de Productos</a></li>
     </ul>
     <h3>Categorías</h3>
     <ul>
-        <li><a asp-action="Create" asp-controller="Categories">Crear Categorías</a></li>
-        <li><a asp-action="Index" asp-controller="Categories">Lista de Categorías</a></li>
+        <li><a href="/categories/create">Crear Categorías</a></li>
+        <li><a href="/categories/index">Lista de Categorías</a></li>
     </ul>
     <h3>Proveedores</h3>
     <ul>
-        <li><a asp-action="Create" asp-controller="Providers">Crear Proveedores</a></li>
-        <li><a asp-action="Index" asp-controller="Providers">Lista de Proveedores</a></li>
+        <li><a href="/providers/create">Crear Proveedores</a></li>
+        <li><a href="/providers/index">Lista de Proveedores</a></li>
     </ul>
 
 </div>
