--- a/WebApp-Cubits/Views/Categories/Index.cshtml
+++ b/WebApp-Cubits/Views/Categories/Index.cshtml
@@ -4,7 +4,7 @@
     <div class="col-lg-12">
         <h2>Lista de Categorias</h2>
         
-        <a asp-controller="Categories" asp-action="Create" class="btn btn-primary">Crear</a>
+        <a href="/categories/create" class="btn btn-primary">Crear</a>
 
         <table class="table table-bordered">
             <thead>
@@ -14,19 +14,38 @@
                     <th>Acciones</th>
                 </tr>
             </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>@item.Id</td>
-                        <td>@item.Name</td>
-                        <td>
-                            <a asp-controller="Categories" asp-action="Edit" asp-route-id="@item.Id">Editar</a> -
-                            <a asp-controller="Categories" asp-action="Delete" asp-route-id="@item.Id">Borrar</a>
-                        </td>
-                    </tr>
-                }
+            <tbody id="tableBody">
+                
             </tbody>
         </table>
     </div>
 </div>
+
+<script type="text/javascript">
+    getList = () => {
+        $.ajax({
+            method: "GET",
+            url: "/api/categories",
+        }).done((categoryList) => {
+            $.each(categoryList, (index, category) => {
+                addRow(category);
+            })
+        })
+    }
+    addRow = (category) => {
+        const row = `
+                <tr>
+                    <td>${category.id}</td>
+                    <td>${category.name}</td>
+                    <td>
+                       <a href='/products/update?id=${category.id}'>Actualizar</a> -
+                        <a href='/products/delete?id=${category.id}'>Eliminar</a>
+                    </td>
+                </tr>
+            `
+        $("#tableBody").append(row);
+    }
+    $(document).ready(() => {
+        getList();
+    })
+</script>
