--- a/WebApp-Cubits/Views/Products/Create.cshtml
+++ b/WebApp-Cubits/Views/Products/Create.cshtml
@@ -36,7 +36,7 @@
 @section Scripts
 {
     <script type="text/javascript">
-            serializeForm = () => {
+         serializeForm = () => {
             var model = {
                 name: getInputValue("name"),
                 description: getInputValue("description"),
@@ -77,5 +77,6 @@
 
         $(document).ready(() => {
             handleSubmit();
-        });</script>
+        });
+    </script>
 }
