--- a/WebApp-Cubits/Views/Providers/Delete.cshtml
+++ b/WebApp-Cubits/Views/Providers/Delete.cshtml
@@ -3,9 +3,58 @@
 <div>
     <h2>Borrar Proveedor</h2>
     <h3>Esta seguro que desea borrar el proveedor?</h3>
-    <div>
-        <form asp-action="Delete" method="post">
-            <input type="submit" value="Borrar" class="btn btn-danger" />
-        </form>
-    </div>
+    <form v-on:submit.prevent="submitForm">
+        <div class="form-group">
+            <label class="col-form-label">Nombre</label>
+            <input class="form-control" v-model="name" type="text" disabled />
+        </div>
+        <div class="form-group">
+            <label class="col-form-label">Descripcion</label>
+            <input class="form-control" v-model="description" type="text" disabled />
+        </div>
+        <div class="form-group">
+            <label class="col-form-label">Direccion</label>
+            <input class="form-control" v-model="address" type="text" disabled />
+        </div>
+        <div class="button-row">
+            <button type="submit" class="btn btn-success">Guardar</button>
+        </div>
+    </form>
 </div>
+
+@section Scripts
+{
+    <script src="~/lib/axios/axios.js"></script>
+    <script src="~/lib/petite-vue/petite-vue.js"></script>
+    
+    <script type="text/javascript">
+        const app = {
+            name: null,
+            description: null,
+            address: null,
+            get data() {
+                return {
+                    model: this.model,
+                    description: this.description,
+                    address: this.address
+                };
+            },
+            set data(value) {
+                this.name = value.name;
+                this.description = value.description;
+                this.address = value.address;
+            },
+            async getProvider() {
+                const id = getParameterFromUrl("id");
+                const response = await axios.get(`/api/providers/${id}`);
+                this.data = response.data;
+            },
+            async submitForm() {
+                const id = getParameterFromUrl("id");
+                await axios.delete(`/api/providers/${id}`);
+                redirectToLocation("/providers");
+            }
+        };
+        PetiteVue.createApp(app).mount();
+    </script>
+}
