--- a/WebApp-Cubits/Views/Providers/Index.cshtml
+++ b/WebApp-Cubits/Views/Providers/Index.cshtml
@@ -1,5 +1,55 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Proveedores";
+}
+
+<style>
+    [v-cloak]{
+        display: none;
+    }
+</style>
+
+<div class="row" v-scope v-cloak v-on:mounted="getList">
+    <div class="col-lg-12">
+        <h2>Proveedores</h2>
+        <a href="/proveedores/create" class="btn btn-primary">Nuevo Proveedor</a>
+
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Nombre</th>
+                    <th>Descripción</th>
+                    <th>Dirección</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr v-for="provider in providerList">
+                    <td>{{provider.id}}</td>
+                    <td>{{provider.name}}</td>
+                    <td>{{provider.description}}</td>
+                    <td>{{provider.address}}</td>
+                    <td>
+                        <a href="'/providers/edit?id=' + provider.id">Editar</a>
+                        <a href="'/providers/delete?id=' + provider.id">Borrar</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+@section Scripts{ 
+    <script src="~/lib/axios/axios.js"></script>
+    <script src="~/lib/petite-vue/petite-vue.js"></script>
+    <script type="text/javascript">
+        const app = {
+            providerList: [],
+            async getList() {
+                let response = await axios.get("/api/providers");
+                this.providerList = response.data;
+            },
+        };
+        PetiteVue.createApp(app).mount();
+    </script>
 }
