Cambios en vistas y modelos

--- a/WebApp-Cubits/Views/Categories/Create.cshtml
+++ b/WebApp-Cubits/Views/Categories/Create.cshtml
@@ -1,4 +1,6 @@
-﻿@model WebApp_Cubits.Models.Category
+﻿@{ 
+    ViewData["Title"] = "Crear Categoria"; 
+}
 <h2>Crear Categoria</h2>
 
 <form id="categoryForm">
@@ -14,7 +16,7 @@
         <button type="submit" class="btn btn-success">Guardar</button>
     </div>
 </form>
-    
+
 @section Scripts
 {
     <script type="text/javascript">
