--- a/WebApp-Cubits/Views/Home/Index.cshtml
+++ b/WebApp-Cubits/Views/Home/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Cubits Bootcamp";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <img src="./images/cubits.jpeg" alt="cubits" class="img-fluid" style="width: 400px;"/>
+    <h1 class="display-4">Cubits - Bootcamp</h1>
+    <p>Primer Bootcamp Cubits 2021</p>
 </div>
 <div class="justify-content-center">
     <h3>Productos</h3>
