--- a/WebApp-Cubits/Views/Categories/Edit.cshtml
+++ b/WebApp-Cubits/Views/Categories/Edit.cshtml
@@ -1,16 +1,83 @@
-﻿@model WebApp_Cubits.Models.Category
-<h2>Editar Categoría</h2>
-
+﻿@{ 
+    ViewData["Title"] = "Editar Categoria"; 
+}
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit" method="post">
-            <div class="form-group">
-                <label class="col-form-label">Nombre:</label>
-                <input class="form-control" asp-for="Name" />
+    <div class="col-lg-12">
+        <h2>Editar Categoría</h2>
+
+        <form id="categoryForm">
+            <div class="row">
+                <div class="form-group">
+                    <label>Nombre</label>
+                    <input type="text" name="name" class="form-control"/>
+                </div>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-primary" />
+            <div class="button-row">
+                <button type="submit" class="btn btn-success">Guardar</button>
+                <a href="/categories" class="btn btn-danger">Cancelar</a>
             </div>
         </form>
     </div>
 </div>
+@section Scripts
+{ 
+    <script type="text/javascript">
+        getInputValue = (input) => {
+            let value = $(`#categoryForm input[name=${input}]`).val();
+
+            return value;
+        };
+
+        serializeForm = () => {
+            return JSON.stringify({
+                name: getInputValue("name")
+            });
+        };
+
+        setInputValue = (value, input) => {
+            $(`#categoryForm input[name=${input}]`).val(value);
+        };
+
+        setFormValue = (category) => {
+            setInputValue("name", category.name);
+        };
+
+        getCategory = () => {
+            const id = getParameterFromUrl("id");
+            const entityUrl = `/api/category/${id}`;
+
+            $.ajax({
+                method: "GET",
+                url: entityUrl
+            }).done((category) => {
+                setFormValue(category);
+            })
+        }
+
+        saveCategory = () => {
+            const id = getParameterFromUrl("id");
+            const entityUrl = `/api/category/${id}`;
+
+            $.ajax({
+                method: "PUT",
+                url: entityUrl,
+                contentType: "application/json",
+                data: serializeForm(),
+            }).done(() => {
+                redirectToLocation("/categories");
+            })
+        };
+
+        handleSubmit = () => {
+            $("#categoryForm").on("submit", (event) => {
+                event.preventDefault();
+                save
+            });
+        }
+
+        $(document).ready(() => {
+            getCategory();
+            handleSubmit();
+        })
+    </script>
+}
