--- a/WebApp-Cubits/Views/Products/Index.cshtml
+++ b/WebApp-Cubits/Views/Products/Index.cshtml
@@ -15,6 +15,7 @@
                         <th>Nombre</th>
                         <th>Descripcion</th>
                         <th>Precio</th>
+                        <th>Stock</th>
                         <th>Acciones</th>
                     </tr>
                 </thead>
@@ -41,17 +42,17 @@
                     <tr>
                         <td>${product.id}</td>
                         <td>${product.name}</td>
-                        <td>${product.desciption}</td>
+                        <td>${product.description}</td>
                         <td>${product.price}</td>
                         <td>${product.stock}</td>
                         <td>
-                            <a href='/products/update?id=${product.id}'>Actualizar</a> -
+                            <a href='/products/edit?id=${product.id}'>Actualizar</a> -
                             <a href='/products/delete?id=${product.id}'>Eliminar</a>
                         </td>
                     </tr>
             `;
             $("#tableBody").append(row);
-
+        }
             $(document).ready(() => {
                 getList();
             })
