--- a/WebApp-Cubits/Views/Providers/Create.cshtml
+++ b/WebApp-Cubits/Views/Providers/Create.cshtml
@@ -1,28 +1,37 @@
-﻿@model WebApp_Cubits.Models.Provider
+﻿@{
+    ViewData["Title"] = "Crear Proveedor";
+}
+
     @*<style>
         [v-cloak] {
-            display: none;
+            display: none !important;
         }
     </style>*@
+
 <div class="row" v-scope v-cloak>
-    <div class="col-md-4">
+    <div class="col-lg-12">
         <h2>Crear Proveedor</h2>
 
         <form v-on:submit.prevent="submitForm">
-            <div class="form-group">
-                <label class="col-form-label">Nombre</label>
-                <input class="form-control" v-model="name" type="text" />
-            </div>
-            <div class="form-group">
-                <label class="col-form-label">Descripcion</label>
-                <input class="form-control" v-model="description" type="text" />
-            </div>
-            <div class="form-group">
-                <label class="col-form-label">Direccion</label>
-                <input class="form-control" v-model="address" type="text" />
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="form-group">
+                        <label>Nombre</label>
+                        <input class="form-control" v-model="name" type="text" />
+                    </div>
+                    <div class="form-group">
+                        <label>Descripcion</label>
+                        <input class="form-control" v-model="description" type="text" />
+                    </div>
+                    <div class="form-group">
+                        <label>Direccion</label>
+                        <input class="form-control" v-model="address" type="text" />
+                    </div>
+                </div>
             </div>
             <div class="button-row">
                 <button type="submit" class="btn btn-success">Guardar</button>
+                <a href="/providers" class="btn btn-danger">Cancelar</a>
             </div>
         </form>
     </div>
@@ -41,14 +50,15 @@
             address: null,
             get data() {
                 return {
+                    name: this.name,
                     model: this.model,
-                    description = this.description,
-                    address: this.address
+                    description: this.description,
+                    address: this.address,
                 };
             },
             async submitForm() {
-                await axios.post('api/providers', this.data);
-                redirectToLocation('api/prividers');
+                await axios.post('/api/providers', this.data);
+                redirectToLocation('/providers');
             }
         };
 
