--- a/WebApp-Cubits/Views/Providers/Edit.cshtml
+++ b/WebApp-Cubits/Views/Providers/Edit.cshtml
@@ -1,29 +1,69 @@
-﻿@model WebApp_Cubits.Models.Provider
+﻿@{ 
+    ViewData["Title"] = "Editar Proveedor";
+}
+
 
     <style>
-
+        [v-cloak]{
+            display: none;
+        }
     </style>
 
-<h2>Crear Proveedor</h2>
+<div class="row" v-scope v-cloak v-on:mounted="getProvider">
+    <div class="col-lg-12">
+        <h2>Editar Proveedor</h2>
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-controller="Provider" asp-action="Edit" method="post">
-            <div class="form-group">
-                <label class="col-form-label">Nombre:</label>
-                <input class="form-control" asp-for="Name" type="text" />
+        <form v-on:submit.prevent="submitForm">
+            <div class="col-lg-6">
+                <div class="form-group">
+                    <label>Nombre</label>
+                    <input type="text" v-model="name" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label>Descripcion</label>
+                    <input type="text" v-model="description" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label>Direccion</label>
+                    <input type="text" v-model="address" class="form-control" />
+                </div>
             </div>
-            <div class="form-group">
-                <label class="col-form-label">Descripcion:</label>
-                <input class="form-control" asp-for="Description"  type="text"/>
-            </div>
-            <div class="form-group">
-                <label class="col-form-label">Direccion:</label>
-                <input class="form-control" asp-for="Address" type="text"/>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-primary" />
+            <div class="button-row">
+                <button type="submit" class="btn btn-success">Guardar</button>
+                <a href="/providers" class="btn btn-danger" >Cancelar</a>
             </div>
         </form>
     </div>
 </div>
+
+@section Scripts
+{ 
+    <script src="~/lib/axios/axios.js"></script>
+    <script src="~/lib/petite-vue/petite-vue.js"></script>
+
+    <script type="text/javascript">
+        const app = {
+            name: null,
+            description: null,
+            address: null,
+            get data() {
+                return {
+                    name = this.name,
+                    description = this.description,
+                    address = this.address,
+                };
+            },
+            set data(value) {
+                this.name = value.name;
+                this.description = value.description;
+                this.address = value.address;
+            },
+            async submitForm() {
+                const id = getParameterFromUrl("id");
+                await axios.put(`/api/providers/${id}`, this.data);
+                redirectToLocation("/providers");
+            }
+        };
+        PetiteVue.createApp(app).mount();
+    </script>
+} 
