--- a/WebApp-Cubits/Views/Providers/Index.cshtml
+++ b/WebApp-Cubits/Views/Providers/Index.cshtml
@@ -11,9 +11,11 @@
 <div class="row" v-scope v-cloak v-on:mounted="getList">
     <div class="col-lg-12">
         <h2>Proveedores</h2>
-        <a href="/proveedores/create" class="btn btn-primary">Nuevo Proveedor</a>
+        <div>
+            <a href="/providers/create" class="btn btn-primary">Nuevo Proveedor</a>
+        </div>
 
-        <table class="table">
+        <table class="table table-bordered">
             <thead>
                 <tr>
                     <th>Id</th>
@@ -30,8 +32,8 @@
                     <td>{{provider.description}}</td>
                     <td>{{provider.address}}</td>
                     <td>
-                        <a href="'/providers/edit?id=' + provider.id">Editar</a>
-                        <a href="'/providers/delete?id=' + provider.id">Borrar</a>
+                        <a :href="'/providers/edit?id=' + provider.id">Editar</a> - 
+                        <a :href="'/providers/delete?id=' + provider.id">Borrar</a>
                     </td>
                 </tr>
             </tbody>
@@ -42,6 +44,7 @@
 @section Scripts{ 
     <script src="~/lib/axios/axios.js"></script>
     <script src="~/lib/petite-vue/petite-vue.js"></script>
+
     <script type="text/javascript">
         const app = {
             providerList: [],
